# pykhipu

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  ejemplo.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: new_release.yml  pre-commit.yaml  tests_coverage.yml
CHANGELOG/: index.html
api/: index.html
contributing/: index.html
docs/: CHANGELOG.md  api.md  contributing.md  index.md  pagos-automaticos.md  pagos-instantaneos.md
khipu_tools/: __init__.py  _api_requestor.py  _banks.py  _base_address.py  _encode.py  _error.py  _error_object.py  _http_client.py  _khipu_client.py  _khipu_object.py  _list_object.py  _payments.py  _predict.py  _request_options.py  _requestor_options.py  _util.py
khipu_tools/pykhipu/: banks.py  client.py  errors.py  items.py  payments.py  receivers.py  responses.py
mock_api/: mock.py
pagos-automaticos/: index.html
pagos-instantaneos/: index.html
search/: search_index.json
tests/: test_client.py  test_core.py
