[tool.poetry]
name = "khipu-tools"
version = "2024.12.1"
description = "Set de herramientas para operar con la API de Khipu"
authors = ["Mario Hernandez <mariofix@proton.me>"]
license = "MIT"
readme = "README.md"
repository = "http://github.com/mariofix/khipu-tools"
classifiers=[
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.4",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Environment :: Console",
]

[tool.poetry.dependencies]
python = ">=3.9"
requests = "*"
python-dateutil = "*"
six = "*"
importlib_metadata = {version = "^1.7.0", python = "<3.9"}
mock = "*"

[tool.poetry.dev-dependencies]
pylint = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.masonry.api"
