[project]
name = "khipu-tools"
version = "2024.12.1"
description = "Set de herramientas para operar con la APIv3 de Khipu"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Mario Hernandez", email = "mariofix@proton.me" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]
keywords = ["khipu", "pagos", "transferencias"]

dependencies = [
    "requests",
    "python-dateutil",
]

[project.urls]
Repository = "http://github.com/mariofix/khipu-tools"
Homepage = "http://mariofix.github.io/khipu-tools"


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pylint",
    "mock",
    "pre-commit>=4.0.1",
]
